@@ -1,5 +1,8 @@
 2008-05-30  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/extensions/gaussianinputdialog.*: Implemented
+	showing and hiding of the preview text - defaults to shown.
+
 	* libavogadro/src/extensions/CMakeLists.txt,
 	libavogadro/src/extensions/templateextension.*: Fixed up the template
 	extension so that it would actually compile, added an example minimal
